--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,10 @@ add_executable(object_extends cpp_puls_memory_area_model/object_extends/object_e
 add_executable(extends_model cpp_puls_memory_area_model/object_extends/extends_model.cpp)
 add_executable(extend_construct_deconstruct_sort cpp_puls_memory_area_model/object_extends/extend_construct_deconstruct_sort.cpp)
 add_executable(extends_same_name_membe_property cpp_puls_memory_area_model/object_extends/extends_same_name_membe_property.cpp)
+add_executable(multiple_extends cpp_puls_memory_area_model/object_extends/multiple_extends.cpp)
+add_executable(static_polymorphism cpp_puls_memory_area_model/object_extends/polymorphism/static_polymorphism.cpp)
+add_executable(dynamic_polymorphism cpp_puls_memory_area_model/object_extends/polymorphism/dynamic_polymorphism.cpp)
+
+add_executable(rwFile cpp_puls_memory_area_model/readAndwriteFile/rwFile.cpp)
+add_executable(template_1 cpp_puls_memory_area_model/stl/func_template_1.cpp)
+add_executable(class_template cpp_puls_memory_area_model/stl/class_template.cpp)
